# Wolf-3D-reduced

./: .gitmodules  CMakeLists.txt  CROSS_UNIX_WIN32_i586.toolchain  README.TXT  README.md  app_def.h  cmake_install.cmake  wolf3dredux.doxygen.config
env/: angle.c  angle.h  client.h  client_input.c  client_main.c  client_screen.c  cmd.c  cmd.h  color.c  color.h  com_math.h  com_string.c  com_string.h  common.c  common.h  common_utils.h  console.c  console.h  cvar.c  cvar.h  fileio.c  filelink.h  files.c  filestring.c  filestring.h  filesystem.h  font_manager.c  font_manager.h  in_view.c  input.h  keycodes.h  keys.c  keys.h  math.c  matrix.c  matrix.h  memory.c  memory.h  menu_conf.c  menu_conf.h  (+41 more)
game/: wolf_act_stat.h  wolf_actor_ai.h  wolf_actors.c  wolf_areas.c  wolf_automap.c  wolf_bj.h  wolf_client_main.c  wolf_level.c  wolf_level.h  wolf_local.h  wolf_main.c  wolf_math.h  wolf_menu.h  wolf_mnewgame.c  wolf_moptions.c  wolf_mquit.c  wolf_player.c  wolf_powerups.c  wolf_powerups.h  wolf_raycast.c  wolf_raycast.h  wolf_renderer.c  wolf_renderer.h
src/: CMakeLists.txt  common.h  main.c
src/env/: font_manager.c  font_manager.h  menu_conf.c  menu_conf.h  platform.h
src/game/: client.h  frame.c  game.c  wolf_act_stat.c  wolf_actor_ai.c  wolf_actors.c  wolf_actors.h  wolf_ai_com.c  wolf_ai_com.h  wolf_areas.c  wolf_automap.c  wolf_bj.c  wolf_doors.c  wolf_level.c  wolf_level.h  wolf_local.h  wolf_main.c  wolf_math.c  wolf_math.h  wolf_mcredits.c  wolf_menu.c  wolf_menu.h  wolf_mintermission.c  wolf_mintro.c  wolf_mnewgame.c  wolf_moptions.c  wolf_mquit.c  wolf_msound.c  wolf_mvideo.c  wolf_player.c  wolf_player.h  wolf_powerups.c  wolf_powerups.h  wolf_pushwalls.c  wolf_raycast.c  wolf_raycast.h  wolf_sprites.c  wolf_sprites.h  wolf_weapon.c
src/game/entities/: entity.c  entity.h  guard.c
src/game/menu/: intro.c  intro.h  main_menu.c  main_menu.h  menu.c  menu.h
src/graphics/: color.c  color.h  opengl_draw.c  opengl_local.h  opengl_main.c  opengl_texture.c  renderer.h  texture_manager.c  texture_manager.h  tga.c  tga.h  unix_openglw_imp.c  unix_vid_sys.c  video.h  window.c  window.h  wolf_opengl.c  wolf_renderer.c  wolf_renderer.h
src/input/: client_input.c  input.c  input.h  input_bindings.c  input_bindings.h  input_context.c  input_context.h  keycodes.h  keys.c  keys.h  unix_keys.c  unix_mouse.c
src/sound/: music.c  music.h  sound.c  sound.h  soundfx.c  soundfx.h
src/util/: com_math.h  com_string.c  com_string.h  compression.c  compression.h  fileio.c  filelink.h  files.c  filestring.c  filestring.h  filesystem.h  glob.c  glob.h  math.c  timer.h  unix_file.c  unix_timer.c  zippak.c  zippak.h
tools/gamepal/: main.c
tools/signon/: main.c  wolf_pal.c
unix/: findfirst.h  firstfind.c  firstfind_w3dr.c  glob.c  ls.c  unix_file.c  unix_file_rewrite.c  unix_find.c  unix_joystick.c  unix_keys.c  unix_main.c  unix_mouse.c  unix_openglw_imp.c  unix_system.c  unix_timer.c  unix_vid_sys.c
win32/: win_def.h  win_file.c  win_joystick.c  win_keys.c  win_main.c  win_mouse.c  win_openglw_imp.c  win_system.c  win_timer.c  win_vid_sys.c
wolf/: wolf_act_stat.c  wolf_act_stat.h  wolf_actor_ai.c  wolf_actor_ai.h  wolf_actors.c  wolf_actors.h  wolf_ai_com.c  wolf_ai_com.h  wolf_areas.c  wolf_automap.c  wolf_bj.c  wolf_bj.h  wolf_client_main.c  wolf_common.c  wolf_doors.c  wolf_level.c  wolf_level.h  wolf_local.h  wolf_main.c  wolf_math.c  wolf_math.h  wolf_mcredits.c  wolf_menu.c  wolf_menu.h  wolf_mintermission.c  wolf_mintro.c  wolf_mnewgame.c  wolf_moptions.c  wolf_mquit.c  wolf_msound.c  wolf_mvideo.c  wolf_opengl.c  wolf_player.c  wolf_player.h  wolf_powerups.c  wolf_powerups.h  wolf_pushwalls.c  wolf_raycast.c  wolf_raycast.h  wolf_renderer.c  (+5 more)
